--- a/Website/css/onoPager-theme-greyscale.css
+++ b/Website/css/onoPager-theme-greyscale.css
@@ -3,7 +3,7 @@
  */
 
 div.onoPager_greyscale {
-  padding-bottom: 10px; 
+  padding-bottom: 10px;
 }
 
 
@@ -51,6 +51,8 @@ div.onoPager_greyscale div.onoPager_controls a.onoPager_step,
 div.onoPager_greyscale div.onoPager_controls div.onoPager_pageByNumber,
 div.onoPager_greyscale.onoPager_disabled:hover div.onoPager_controls a.onoPager_step,
 div.onoPager_greyscale.onoPager_disabled:hover div.onoPager_controls div.onoPager_pageByNumber {
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
   opacity: 0.5;
   min-height: 0;
   -moz-transition: all 0.2s ease-out;  
@@ -59,6 +61,12 @@ div.onoPager_greyscale.onoPager_disabled:hover div.onoPager_controls div.onoPage
   -ms-transition: all 0.2s ease-out;  
   transition: all 0.2s ease-out;  
   font-size: 0.9em;
+}
+div.onoPager_greyscale.msie7 div.onoPager_controls a.onoPager_step,
+div.onoPager_greyscale.msie7 div.onoPager_controls div.onoPager_pageByNumber,
+div.onoPager_greyscale.msie7.onoPager_disabled:hover div.onoPager_controls a.onoPager_step,
+div.onoPager_greyscale.msie7.onoPager_disabled:hover div.onoPager_controls div.onoPager_pageByNumber {
+  left: 0;
 }
 div.onoPager_greyscale div.onoPager_controls:after {
   clear: both;
@@ -69,6 +77,8 @@ div.onoPager_greyscale:hover div.onoPager_controls a.onoPager_step,
 div.onoPager_greyscale:hover div.onoPager_controls div.onoPager_pageByNumber,
 div.onoPager_greyscale:hover div.onoPager_controls.active a.onoPager_step,
 div.onoPager_greyscale:hover div.onoPager_controls.active div.onoPager_pageByNumber {
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: alpha(opacity=100);
   opacity: 1;
 }
 
@@ -102,6 +112,9 @@ div.onoPager_greyscale.onoPager_disabled div.onoPager_controls.active a.onoPager
   z-index: 1;
   top: -10px;
 }
+div.onoPager_greyscale.msie7 a.onoPager_step {
+  top: -5px !important;
+}
 div.onoPager_greyscale:hover a.onoPager_step,
 div.onoPager_greyscale div.onoPager_controls.active a.onoPager_step {
   top: 0;
@@ -120,6 +133,8 @@ div.onoPager_greyscale.onoPager_animation_linearScroller a.onoPager_step:hover {
 }
 
 div.onoPager_greyscale a.onoPager_step.disabled {
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=30)" !important;
+  filter: alpha(opacity=30) !important;
   opacity: 0.3 !important;
   cursor: default;
   text-decoration: none !important;
@@ -148,6 +163,9 @@ div.onoPager_greyscale.onoPager_disabled div.onoPager_controls.active div.onoPag
   -ms-transition: all 0.2s ease-out;  
   transition: all 0.2s ease-out;  
 }
+div.onoPager_greyscale.msie7 div.onoPager_pageByNumber {
+  margin-top: -5px !important;
+}
 div.onoPager_greyscale:hover div.onoPager_pageByNumber,
 div.onoPager_greyscale div.onoPager_controls.active div.onoPager_pageByNumber {
   margin-top: 0;
@@ -165,6 +183,9 @@ div.onoPager_greyscale div.onoPager_pageByNumber a.onoPager_active {
   font-weight: normal;
   text-decoration: none !important;
   background: #999999;
+}
+div.onoPager_greyscale.msie9 div.onoPager_pageByNumber a.onoPager_active {
+  padding-top: 2px;
 }
 
 
@@ -193,12 +214,20 @@ div.onoPager_greyscale div.onoPager_controls.active div.onoPager_status {
 div.onoPager_greyscale div.onoPager_scroller,
 div.onoPager_greyscale.onoPager_disabled:hover div.onoPager_scroller,
 div.onoPager_greyscale.onoPager_disabled div.onoPager_scroller.active {
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
   margin-left: 1px;
   opacity: 0;
   background: rgba(0, 0, 0, 0.05);
 }
+div.onoPager_greyscale.msie7 div.onoPager_scroller,
+div.onoPager_greyscale.msie8 div.onoPager_scroller {
+  padding-bottom: 2px;
+}
 div.onoPager_greyscale:hover div.onoPager_scroller,
 div.onoPager_greyscale div.onoPager_scroller.active {
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: alpha(opacity=100);
   opacity: 1;
   box-shadow: 1px 1px 3px 1px #ccc;
 }
@@ -208,6 +237,7 @@ div.onoPager_greyscale.onoPager_disabled div.onoPager_scrollerHandle:hover,
 div.onoPager_greyscale.onoPager_disabled div.onoPager_scroller.active div.onoPager_scrollerHandle {
   width: 10px;
   height: 10px;
+  border-radius: 10px;
 }
 div.onoPager_greyscale div.onoPager_scrollerHandle:hover,
 div.onoPager_greyscale div.onoPager_scroller.active div.onoPager_scrollerHandle {
