--- a/Website/css/page2.css
+++ b/Website/css/page2.css
@@ -84,6 +84,21 @@ h4 {
 
 
 
+*.genericContent p + p {
+  margin-top: 1em;
+}
+
+*.genericContent code {
+  border-radius: 3px;
+  padding: 1px 1px;
+  font-family: Consolas,"Andale Mono WT","Andale Mono","Lucida Console","Lucida Sans Typewriter","DejaVu Sans Mono","Bitstream Vera Sans Mono","Liberation Mono","Nimbus Mono L",Monaco,"Courier New",Courier,monospace;
+  font-size: 0.95em;
+  background: rgba(255,255,255,0.7);
+}
+
+
+
+
 ul.simpleList {
   margin-left: 20px;
   list-style: disc;
